methods.slug.SlugSnail.scala.error
Erreur de compilation :
SlugSnail:9: error: not found: value marqueCase
      marqueCase()
      ^